@@ -55,6 +55,8 @@
 @get_current_word: 
 @get_filename: 
 @get_length: 
+@get_line_begin_position: 
+@get_line_end_position: 
 @get_line_from_position: 
 @get_lineno: 
 @get_overwrite: 
